--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@tinymce/tinymce-angular": "^7.0.0",
     "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
