--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@tinymce/tinymce-angular": "^7.0.0",
+    "angular2-notifications": "^16.0.1",
     "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
