add export excell + print

--- a/package.json
+++ b/package.json
@@ -24,15 +24,23 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@tinymce/tinymce-angular": "^7.0.0",
     "angular2-notifications": "^16.0.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.14",
     "ngx-material-timepicker": "^13.1.1",
+    "ngx-print": "^1.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
